# COM6513

./: main.py  pyproject.toml
materials/labs/: Lab 1 - Transformers.ipynb  Lab 2 - Tokenisation.ipynb  Lab 3 - Tiny Neural LM.ipynb
materials/labs/Solutions/: Lab 2.ipynb  Lab 3.ipynb
