[project]
name = "com6513"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy<2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
